--- a/ng-admin/src/tobacco-management/visit-task/visit-task.component.html
+++ b/ng-admin/src/tobacco-management/visit-task/visit-task.component.html
@@ -5,14 +5,6 @@
         <div nz-row [nzGutter]="24">
             <div nz-col [nzSpan]="8" class="mb-md">
                 <nz-form-item class="d-flex">
-                    <nz-form-label nzFor="name">任务名称</nz-form-label>
-                    <nz-form-control class="flex-1">
-                        <input nz-input [(ngModel)]="search.name" name="name" placeholder="请输入任务名称" nzSize="default">
-                    </nz-form-control>
-                </nz-form-item>
-            </div>
-            <div nz-col [nzSpan]="8" class="mb-md">
-                <nz-form-item class="d-flex">
                     <nz-form-label nzFor="taskType">任务类型</nz-form-label>
                     <nz-form-control class="flex-1">
                         <nz-select [nzPlaceHolder]="'请选择任务类型'" name="taskType" [(ngModel)]="search.taskType"
@@ -23,6 +15,15 @@
                     </nz-form-control>
                 </nz-form-item>
             </div>
+            <div nz-col [nzSpan]="8" class="mb-md">
+                <nz-form-item class="d-flex">
+                    <nz-form-label nzFor="name">任务名称</nz-form-label>
+                    <nz-form-control class="flex-1">
+                        <input nz-input [(ngModel)]="search.name" name="name" placeholder="请输入任务名称" nzSize="default">
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+
             <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
                 <button nz-button type="submit" nzType="primary" [nzLoading]="loading">查询</button>
                 <button nz-button type="reset" (click)="refreshData(true)" class="mx-sm">重置</button>
@@ -39,17 +40,19 @@
         (nzPageIndexChange)="refreshData()" (nzPageSizeChange)="refreshData()">
         <thead>
             <tr>
-                <th>任务名称</th>
                 <th>任务类型</th>
+                <th>任务名称</th>
                 <th>是否考核</th>
+                <th>任务描述</th>
                 <th>操作</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let data of nzTable.data">
-                <td>{{data.name}}</td>
                 <td>{{data.typeName}}</td>
+                <td>{{data.name}}</td>
                 <td>{{data.isExamine == true?"是":"否"}}</td>
+                <td>{{data.desc | lengthLimit:100}}</td>
                 <td>
                     <a (click)="goDetail(data.id)">查看详情</a>
                 </td>
