--- a/ng-admin/src/tobacco-management/schedule/schedule.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule.component.html
@@ -42,7 +42,7 @@
                 <th>计划状态</th>
                 <th>创建人</th>
                 <th>区县</th>
-                <th>完成度</th>
+                <th>完成率</th>
                 <th>发布时间</th>
                 <th>操作</th>
             </tr>
@@ -54,10 +54,11 @@
                 <td>{{data.status==true?"已发布":"草稿"}}</td>
                 <td>{{data.createUserName}}</td>
                 <td>{{data.area}}</td>
-                <td>100%</td>
+                <td *ngIf="data.status==true">{{data.percentage*100}}%</td>
+                <td *ngIf="data.status==false"> - </td>
                 <td>{{data.publishTime| _date}}</td>
                 <td>
-                    <a (click)="goDetail(data.id)">查看详情</a>
+                    <a (click)="goDetail(data.id,data.percentage*100)">查看详情</a>
                 </td>
             </tr>
         </tbody>
