数据配置菜单样式、增加钉钉配置

--- a/ng-admin/src/tobacco-management/report-form/report-form.component.html
+++ b/ng-admin/src/tobacco-management/report-form/report-form.component.html
@@ -70,7 +70,7 @@
             <thead>
                 <tr>
                     <th>
-                        <span>区域</span>
+                        <span>区县</span>
                     </th>
                     <th>
                         <span>计划名</span>
@@ -79,10 +79,10 @@
                         <span>计划时间</span>
                     </th>
                     <th>
-                        <span>任务名</span>
+                        <span>任务类型</span>
                     </th>
                     <th>
-                        <span>任务类型</span>
+                        <span>任务名</span>
                     </th>
                     <th>
                         <span>计划数</span>
@@ -103,8 +103,8 @@
                     <td>{{sum.areaName}}</td>
                     <td>{{sum.sheduleName}}</td>
                     <td>{{sum.time}}</td>
-                    <td>{{sum.taskName}}</td>
                     <td>{{sum.taskTypeName}}</td>
+                    <td>{{sum.taskName}}</td>
                     <td>{{sum.total}}</td>
                     <td>{{sum.complete}}</td>
                     <td>{{sum.expired}}</td>
@@ -213,7 +213,7 @@
             <thead>
                 <tr>
                     <th>
-                        <span>区域</span>
+                        <span>区县</span>
                     </th>
                     <th>
                         <span>计划名</span>
@@ -222,10 +222,10 @@
                         <span>计划时间</span>
                     </th>
                     <th>
-                        <span>任务名</span>
+                        <span>任务类型</span>
                     </th>
                     <th>
-                        <span>任务类型</span>
+                        <span>任务名</span>
                     </th>
                     <th>
                         <span>计划数</span>
@@ -255,8 +255,8 @@
                     <td>{{sum.areaName}}</td>
                     <td>{{sum.sheduleName}}</td>
                     <td>{{sum.time}}</td>
-                    <td>{{sum.taskName}}</td>
                     <td>{{sum.typeName}}</td>
+                    <td>{{sum.taskName}}</td>
                     <td>{{sum.visitNum}}</td>
                     <td>{{sum.completeNum}}</td>
                     <td>{{sum.expired}}</td>
