--- a/ng-admin/src/configs/data-config/data-config.component.html
+++ b/ng-admin/src/configs/data-config/data-config.component.html
@@ -2,25 +2,19 @@
 <nz-tabset>
     <nz-tab nzTitle="烟叶服务">
         <div nz-row>
-            <div nz-col [nzSpan]="6">
-                <!-- <nz-tag nzMode="checkable" [nzChecked]="true" (nzCheckedChange)="checkChange($event,paramLe.Type=3)">烟农单位</nz-tag>
-                    <nz-tag nzMode="checkable" [nzChecked]="true" (nzCheckedChange)="checkChange($event,paramLe.Type=4)">烟农村组</nz-tag>
-                    <nz-tag nzMode="checkable" [nzChecked]="true" (nzCheckedChange)="checkChange($event,paramLe.Type=5)">烟叶公共</nz-tag> -->
-                <nz-radio-group style="display: block;" *ngFor="let item of configLeaf" [(ngModel)]="paramLe.Type" [nzButtonStyle]="'solid'"
+            <div nz-col [nzSpan]="4">
+                <!-- <nz-radio-group style="display: block;" *ngFor="let item of configLeaf" [(ngModel)]="paramLe.Type" [nzButtonStyle]="'solid'"
                     (ngModelChange)="checkChangeLeaf()">
                     <label nz-radio-button [nzValue]="item.value" style="margin-top: 10px;">
                         <span>{{item.text}}</span>
                     </label>
-                </nz-radio-group>
+                </nz-radio-group> -->
+                <ul nz-menu [nzMode]="'inline'">
+                    <li *ngFor="let item of configLeaf" nz-menu-item [nzSelected]="item.selected" (click)="checkChangeLeaf(item)">{{item.text}}</li>
+                </ul>
 
-                <!-- <ul nz-menu [nzMode]="'vertical'" *ngFor="let item of configLeaf" style="width: 240px;">
-                    <li nz-menu-item>
-                        <span title>
-                            <i class="anticon anticon-mail"></i> {{item.text}}</span>
-                    </li>
-                </ul> -->
             </div>
-            <div nz-col [nzSpan]="18">
+            <div nz-col [nzSpan]="20">
                 <ng-template #deleteContent>
                     <h2>是否删除配置项{{LeafName}}?</h2>
                 </ng-template>
@@ -51,7 +45,7 @@
                                 <span>编码</span>
                             </th>
                             <th>
-                                <span>描述</span>
+                                <span>配置项</span>
                             </th>
                             <th>
                                 <span>序号</span>
@@ -82,12 +76,15 @@
     <nz-tab nzTitle="会议管理">
         <div nz-row [nzGutter]="24">
             <div nz-col [nzSpan]="4" class="mb-md">
-                <nz-radio-group style="display: block;" *ngFor="let item of configMetting" [(ngModel)]="paramMe.Type" [nzButtonStyle]="'solid'"
+                <!-- <nz-radio-group style="display: block;" *ngFor="let item of configMetting" [(ngModel)]="paramMe.Type" [nzButtonStyle]="'solid'"
                     (ngModelChange)="checkChangeMetting()">
                     <label nz-radio-button [nzValue]="item.value" style="margin-top: 10px;">
                         <span>{{item.text}}</span>
                     </label>
-                </nz-radio-group>
+                </nz-radio-group> -->
+                <ul nz-menu [nzMode]="'inline'">
+                    <li *ngFor="let item of configMetting" nz-menu-item [nzSelected]="item.selected" (click)="checkChangeMetting(item)">{{item.text}}</li>
+                </ul>
             </div>
             <div nz-col [nzSpan]="20" class="mb-md">
                 <ng-template #deleteContentMe>
@@ -119,7 +116,7 @@
                                 <span>编码</span>
                             </th>
                             <th nz-th>
-                                <span>描述</span>
+                                <span>配置项</span>
                             </th>
                             <th nz-th>
                                 <span>序号</span>
@@ -140,6 +137,72 @@
                                 <!-- <span nz-table-divider></span> -->
                                 <nz-divider nzType="vertical"></nz-divider>
                                 <a (click)="deleteMetting(metting,deleteContentMe)">删除</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </nz-table>
+            </div>
+
+        </div>
+    </nz-tab>
+    <nz-tab nzTitle="钉钉配置">
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="4" class="mb-md">
+                <ul nz-menu [nzMode]="'inline'">
+                    <li *ngFor="let item of configDing" nz-menu-item [nzSelected]="item.selected" (click)="checkChangeconfigDing(item)">{{item.text}}</li>
+                </ul>
+            </div>
+            <div nz-col [nzSpan]="20" class="mb-md">
+                <!-- <ng-template #deleteContentMe>
+                    <h2>是否删除配置项{{mettingName}}?</h2>
+                </ng-template> -->
+                <form nz-form (ngSubmit)="getAllDing()" [nzLayout]="'inline'">
+                    <div nz-row [nzGutter]="24">
+                        <div nz-col nzOffset="20" [nzSpan]="4" class="mb-md" [class.text-right]="'true'">
+                            <button nz-button (click)="getAllDing()" nzShape="circle">
+                                <i class="anticon anticon-reload"></i>
+                            </button>
+                            <button nz-button (click)="addConfigDing()" nzShape="circle" [nzType]="'primary'" [nzSize]="'large'">
+                                <i class="anticon anticon-plus"></i>
+                                <!-- <span>新建</span> -->
+                            </button>
+                        </div>
+                    </div>
+                </form>
+                <ng-template #totalContentMe>共{{queryDi.total}}条</ng-template>
+                <nz-table #nzTableDi [nzData]="systemDataDings" [nzFrontPagination]="false" [nzTotal]="queryDi.total" [(nzPageIndex)]="queryDi.pageIndex"
+                    [(nzPageSize)]="queryDi.pageSize" [nzShowTotal]="totalContentMe" [nzLoading]="loadingDi" [nzShowTotal]="'true'"
+                    [nzShowSizeChanger]="true" (nzPageIndexChange)="getAllDing()" (nzPageSizeChange)="getAllDing()">
+                    <thead nz-thead>
+                        <tr>
+                            <th nz-th>
+                                <span>配置类型</span>
+                            </th>
+                            <th nz-th>
+                                <span>编码</span>
+                            </th>
+                            <th nz-th>
+                                <span>配置项</span>
+                            </th>
+                            <th nz-th>
+                                <span>序号</span>
+                            </th>
+                            <th>
+                                <span>操作</span>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody nz-tbody>
+                        <tr nz-tbody-tr *ngFor="let ding of nzTableDi.data">
+                            <td nz-td>{{ding.typeName}}</td>
+                            <td nz-td>{{ding.code}}</td>
+                            <td nz-td>{{ding.desc}}</td>
+                            <td nz-td>{{ding.seq}}</td>
+                            <td nz-td>
+                                <a (click)="editDing(ding)">编辑</a>
+                                <!-- <span nz-table-divider></span> -->
+                                <nz-divider nzType="vertical"></nz-divider>
+                                <a (click)="deleteDing(ding,deleteContentMe)">删除</a>
                             </td>
                         </tr>
                     </tbody>
