--- a/ng-admin/src/tobacco-management/schedule/schedule-detail/choose-employee-modal/choose-employee-modal.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule-detail/choose-employee-modal/choose-employee-modal.component.html
@@ -1,8 +1,9 @@
-<nz-modal [(nzVisible)]="isVisible" nzWidth="1024px" nzMaskClosable="false" nzTitle="任务指派" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
+<nz-modal [(nzVisible)]="isVisible" nzWidth="1024px" nzMaskClosable="false" nzTitle="任务指派" [nzContent]="modalContent"
+    (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
     <ng-template #modalContent>
         <nz-card [nzBordered]="false" *ngIf="isVisible">
             <div nz-row>
-                <div nz-col nzSpan="8">
+                <div nz-col nzSpan="6">
                     <div style="padding-left:10px; padding-right:10px;">
                         <!-- <nz-tree [(ngModel)]="nodes" [nzCheckable]="true" [nzMultiple]="true" [nzShowExpand]="true" (nzClick)="activeNode($event)" (nzDblClick)="openFolder($event)" [nzDefaultExpandedKeys]="expandKeys" [nzDefaultCheckedKeys]="checkedKeys" [nzDefaultSelectedKeys]="selectedKeys"
                             [nzDefaultExpandAll]="expandDefault">
@@ -40,13 +41,16 @@
                         </ul>
                     </div>
                 </div>
-                <div nz-col nzSpan="16">
+                <div nz-col nzSpan="18">
                     <ng-template #totalTemplate let-total>共 {{query.total}} 条</ng-template>
-                    <nz-table #nzTable [nzFrontPagination]="false" [nzShowTotal]="totalTemplate" [nzTotal]="query.total" [nzData]="employeeList" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true" (nzPageIndexChange)="refreshData(tempNode)"
+                    <nz-table #nzTable [nzFrontPagination]="false" [nzShowTotal]="totalTemplate" [nzTotal]="query.total"
+                        [nzData]="employeeList" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize"
+                        [nzLoading]="loading" [nzShowSizeChanger]="true" (nzPageIndexChange)="refreshData(tempNode)"
                         (nzPageSizeChange)="refreshData(tempNode)">
                         <thead>
                             <tr>
-                                <th nzShowCheckbox [(nzChecked)]="allChecked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="checkAll($event)"></th>
+                                <th nzShowCheckbox [(nzChecked)]="allChecked" [nzIndeterminate]="indeterminate"
+                                    (nzCheckedChange)="checkAll($event)"></th>
                                 <th>姓名</th>
                                 <th>职位</th>
                                 <th>电话号码</th>
