--- a/ng-admin/src/tobacco-management/schedule/schedule-detail/choose-task-modal/choose-task-modal.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule-detail/choose-task-modal/choose-task-modal.component.html
@@ -1,4 +1,5 @@
-<nz-modal [(nzVisible)]="isVisible" nzTitle="选择任务" [nzContent]="modalContent" nzWidth="720px" nzMaskClosable="false" (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
+<nz-modal [(nzVisible)]="isVisible" nzTitle="选择任务" [nzContent]="modalContent" nzWidth="720px" nzMaskClosable="false"
+    (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
     <ng-template #modalContent>
         <!-- <nz-card [nzBordered]="false" *ngIf="isVisible"> -->
         <!-- <form nz-form (ngSubmit)="refreshData()" [nzLayout]="'inline'">
@@ -20,17 +21,18 @@
             </form> -->
         <!-- <span style="margin-left: 8px;" *ngIf="checkedNumber">Selected {{checkedNumber}} items</span> -->
 
-        <nz-table #nzTable [nzShowSizeChanger]="true" [nzData]="taskList" [nzShowPagination]="false" [nzLoading]="eloading" [nzShowSizeChanger]="true">
+        <nz-table #nzTable [nzShowSizeChanger]="true" [nzData]="taskList" [nzShowPagination]="false" [nzLoading]="eloading"
+            [nzShowSizeChanger]="true">
             <thead>
                 <tr>
                     <th nz-th> <label nz-checkbox [(ngModel)]="isSelectedAll" (ngModelChange)="checkAll($event)">
-                            </label>
-                    </th>
-                    <th nz-th>
-                        <span>任务名称</span>
+                        </label>
                     </th>
                     <th nz-th>
                         <span>任务类型</span>
+                    </th>
+                    <th nz-th>
+                        <span>任务名称</span>
                     </th>
                     <th nz-th>
                         <span>是否考核</span>
@@ -44,10 +46,10 @@
                 <tr nz-tbody-tr *ngFor="let item of nzTable.data">
                     <td>
                         <label nz-checkbox [(ngModel)]="item.checked" (ngModelChange)="isCancelCheck($event)">
-                            </label>
+                        </label>
                     </td>
-                    <td>{{item.name | lengthLimit:8}}</td>
                     <td>{{item.typeName}}</td>
+                    <td>{{item.name | lengthLimit:8}}</td>
                     <td>{{item.isExamine == true?"是":"否"}}</td>
                     <td>
                         <nz-input-number [nzPrecision]="0" [(ngModel)]="item.visitNum" [nzMin]="0"></nz-input-number>
