--- a/ng-admin/src/tobacco-management/schedule/schedule-detail/schedule-detail.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule-detail/schedule-detail.component.html
@@ -1,7 +1,7 @@
 <!-- <pro-header></pro-header> -->
 <nz-tabset>
     <nz-tab nzTitle="计划详情">
-        <nz-card [nzBordered]="false" nzTitle="计划详情">
+        <nz-card [nzBordered]="false" nzTitle="">
             <form nz-form [formGroup]="validateForm" *ngIf="schedule">
                 <div nz-row>
                     <div nz-col [nzSpan]="16">
@@ -105,7 +105,7 @@
                     <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
                         <button nz-button type="button" (click)="showModal(null)" nzType="primary">
                             <i class="anticon anticon-plus"></i>
-                            <span>新增任务</span>
+                            <span>添加任务</span>
                         </button>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                         <th>任务类型</th>
                         <th>是否考核</th>
                         <th>默认拜访次数</th>
-                        <th>操作</th>
+                        <th *ngIf="isPush && !isNewInfo">操作</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -128,12 +128,12 @@
                         <td>{{data.typeName}}</td>
                         <td>{{data.isExamine == true?"是":"否"}}</td>
                         <td>{{data.visitNum}}</td>
-                        <td>
-                            <a (click)="assignTask(data.id,data.taskId,data.visitNum)">指派详情</a>
-                            <nz-divider *ngIf="isPush&&!isNewInfo" nzType="vertical"></nz-divider>
-                            <a *ngIf="isPush&&!isNewInfo" (click)="assignAll(data.id,data.taskId,data.visitNum)">全部指派</a>
-                            <nz-divider *ngIf="isPush&&!isNewInfo" nzType="vertical"></nz-divider>
-                            <a *ngIf="isPush&&!isNewInfo" style="color:red" (click)="deleteTask(data)">移除</a>
+                        <td *ngIf="isPush && !isNewInfo">
+                            <a (click)="assignTask(data.id,data.taskId,data.visitNum)">选择部分指派</a>
+                            <nz-divider nzType="vertical"></nz-divider>
+                            <a (click)="assignAll(data.id,data.taskId,data.visitNum)">指派给全部</a>
+                            <nz-divider nzType="vertical"></nz-divider>
+                            <a style="color:red" (click)="deleteTask(data)">删除</a>
                         </td>
                     </tr>
                 </tbody>
@@ -160,7 +160,7 @@
         </nz-card>
         <choose-task-modal #selectTaskModal (modalSelect)="getSelectData() "></choose-task-modal>
     </nz-tab>
-    <nz-tab nzTitle="计划明细">
+    <nz-tab nzTitle="任务指派完成明细">
         <nz-card [nzBordered]="false" nzTitle={{recordTitle}}>
             <ng-template #totalTemplate let-total>共 {{queryRecord.total}} 条</ng-template>
             <nz-table #nzTableRecord [nzData]="recordList" [nzFrontPagination]="false" [nzTotal]="queryRecord.total"
@@ -169,24 +169,24 @@
                 (nzPageSizeChange)="getScheduleRecordDetail()">
                 <thead>
                     <tr>
-                        <th>任务名称</th>
+                        <th>任务</th>
+                        <th>烟农</th>
                         <th>烟技员</th>
-                        <th>计划数</th>
-                        <th>完成数</th>
+                        <th>计划</th>
+                        <th>完成</th>
                         <th>完成率</th>
                         <th>状态</th>
-                        <th>烟农</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let data of nzTableRecord.data">
                         <td>{{data.taskName}}</td>
+                        <td>{{data.growerName}}</td>
                         <td>{{data.employeeName}}</td>
                         <td>{{data.completeNum}}</td>
                         <td>{{data.visitNum}}</td>
                         <td>{{data.percentage}}</td>
                         <td>{{data.statusName}}</td>
-                        <td>{{data.growerName}}</td>
                     </tr>
                 </tbody>
             </nz-table>
