--- a/ng-admin/src/tobacco-management/schedule/schedule.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule.component.html
@@ -41,9 +41,11 @@
             <tr>
                 <th>计划名称</th>
                 <th>计划类型</th>
+                <th>开始时间</th>
+                <th>结束时间</th>
                 <th>计划状态</th>
                 <th>创建人</th>
-                <th>区县</th>
+                <!-- <th>区县</th> -->
                 <th>完成率</th>
                 <th>发布时间</th>
                 <th>操作</th>
@@ -53,9 +55,11 @@
             <tr *ngFor="let data of nzTable.data">
                 <td>{{data.name}}</td>
                 <td>{{data.typeName}}</td>
+                <td>{{data.beginTimeFormat}}</td>
+                <td>{{data.endTimeFormat}}</td>
                 <td>{{data.status==true?"已发布":"草稿"}}</td>
                 <td>{{data.createUserName}}</td>
-                <td>{{data.area}}</td>
+                <!-- <td>{{data.area}}</td> -->
                 <td *ngIf="data.status==true">{{data.percentage}}%</td>
                 <td *ngIf="data.status==false"> - </td>
                 <td>{{data.publishTime| _date}}</td>
